--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,10 +1,13 @@
 header {
   display: flex;
+  position: fixed;
   font-family: Verdana;
   font-size: 14px;
   font-weight: bold;
   width: 100%;
   border-bottom: 1px solid black;
+  background-color: white;
+  z-index: 5;
   padding: 10px 25px;
 }
 
@@ -30,4 +33,31 @@ header li {
 
 header a {
   color: black;
+}
+
+.main {
+  display: flex;
+  position: relative;
+  top: 110px;
+  border: 1px solid black;
+}
+
+.column {
+  margin: 0 auto;
+}
+
+.large {
+  width: 630px;
+}
+
+.medium {
+  width: 300px;
+}
+
+.small {
+  width: 240px;
+}
+
+.column, .article, .story-link, .caption {
+  border: 1px solid black;
 }
