--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,6 +9,7 @@ header {
   background-color: white;
   z-index: 5;
   padding: 10px 25px;
+  margin-top: -10px;
 }
 
 header h3 {
@@ -69,6 +70,8 @@ header a {
   background-size: cover;
   background-color: darkGrey;
   display: flex;
+  justify-content: ceter;
+  align-content: center;
 }
 
 .caption {
@@ -77,7 +80,6 @@ header a {
   font-size: 30px;
   font-weight: bold;
   text-align: center;
-  padding: 20% 5%;
 }
 
 .big {
@@ -141,7 +143,6 @@ header a {
 }
 
 .footer {
-  clear: both;
   position: relative;
   top: 150px;
   display: flex;
@@ -156,7 +157,10 @@ header a {
 }
 
 .foot-nav {
-  display: inline-flex;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 100px 280px;
+  width: 100%;
 }
 
 .title {
@@ -166,11 +170,25 @@ header a {
  color: white;
  border-right: 2px solid white;
  padding-right: 30px;
- height: 30px;
+ height: 25px;
+ display: inline-flex;
+ line-height: 1.8;
 }
 
 .footer nav {
   color: black;
   list-style-type: none;
   display: inline-flex;
+  padding-top: 15px;
+}
+
+.footer a {
+  padding: 5px 10px;
+  color: black;
+}
+
+.copy {
+  width: 100%;
+  margin-top: -15px;
+  padding-left: 25px;
 }
